--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\Framework\HOItem.cs" />
      <Compile Include="Assets\Scripts\Framework\HOManager.cs" />
      <Compile Include="Assets\Scripts\Framework\HOPanel.cs" />
+     <Compile Include="Assets\Scripts\Framework\HOPlaceholder.cs" />
      <Compile Include="Assets\Scripts\Framework\InventoryItem.cs" />
      <Compile Include="Assets\Scripts\Framework\InventoryManager.cs" />
      <Compile Include="Assets\Scripts\Framework\InventoryPanel.cs" />
